
	* Do not update the client->router in the function
	  silc_server_udpate_clients_by_server if the client is on
	  global list.  We might fail to find any specific server
	  for locally connected clients and local cell clients.  They
	  should still use the `from' and not `to' as client->router.
	  This fixes backup router resuming protocol.  Affected file
	  silcd/server_util.c.

Sun Oct 14 18:28:22 EDT 2001  Pekka Riikonen <priikone@silcnet.org>

	* Assure that router cannot reroute the same channel message
	  to the sender.  Affected file silcd/packet_receive.c.

Sat Oct 13 12:46:18 EDT 2001  Pekka Riikonen <priikone@silcnet.org>

	* Made better checks that the channel message is not sent
	  to the router it came from.  Affected file is
	  silcd/packet_send.c.  Fixed memory leak too.

	* Announce informations for incoming router connection, but
	  only after checking if it is replaced by backup router.
	  Affected file silcd/packet_receive.c.

Fri Oct 12 18:37:24 EDT 2001  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the backup resuming protocol to work in multiple
	  router environment.  Affected file silcd/server_backup.c.

	* Route packet only to one router in the function
	  silc_server_packet_send_to_channel.  Affected file is
	  silcd/packet_send.c.

	* Fixed silc_server_send_notify_dest to set the broadcast
	  flag.  Fixed the silc_server_send_notify_topic to actually
	  send the TOPIC_CHANGE notify and not SERVER_SIGNOFF notify.
	  Affected file silcd/packet_send.c.

	* Changed the SFTP Filesystem interface.  Changed the
	  SilcSFTPFilesystemStruct to SilcSFTPFilesystemOps to include
	  the filesystem operation function.  The SilcSFTPFilesystem
	  is now a context that is allocated by all filesystem allocation
	  functions and it already includes the operations structure
	  and filesystem specific context.  It is given as argument
	  now to the silc_sftp_server_start.  This made the interface