@@ -1,5 +1,5 @@
 #
-# CELL 2 Server 212.146.42.150 on port 706
+# CELL 3 Server 212.146.42.150 on port 706
 #
 
 [Cipher]
