@@ -14,6 +14,15 @@ Mon Oct 15 17:42:55 EDT 2001  Pekka Riikonen <priikone@silcnet.org>
 	  This fixes backup router resuming protocol.  Affected file
 	  silcd/server_util.c.
 
+	* Decrease channel statistics count only if the channel
+	  deletion worked.  Affected files are silcd/server.c and
+	  silcd/server_util.c.
+
+	* Added silc_server_update_servers_by_server to update origin
+	  of all server entries.  Used during backup router protocol.
+	  Affected files silcd/server_util.[ch], silcd/server.c. and
+	  silcd/backup_router.c.
+
 Sun Oct 14 18:28:22 EDT 2001  Pekka Riikonen <priikone@silcnet.org>
 
 	* Assure that router cannot reroute the same channel message
